Fix header on mobile

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -129,6 +129,20 @@ p, .text-normal, .post ul {
   }
 }
 
+@media(max-width: $phone-max-width){
+  .mobile-flex-col {
+    flex-direction: column;
+  }
+
+  .mobile-p-top-0 {
+    padding-top: 0;
+  }
+
+  .mobile-p-bot-0 {
+    padding-bottom: 0;
+  }
+}
+
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.3;
   font-family: 'Crimson Text', serif;
